--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "gulp-imagemin": "^2.4.0",
     "gulp-livereload": "^3.8.1",
     "gulp-notify": "^2.2.0",
-    "gulp-rename": "^1.2.2"
+    "gulp-rename": "^1.2.2",
+    "gulp-responsive": "^2.0.0",
+    "gulp-responsive-images": "0.0.3"
   },
   "description": ""
 }
