--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "gulp-notify": "^2.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-responsive": "^2.0.0",
-    "gulp-responsive-images": "0.0.3"
+    "gulp-responsive-images": "0.0.3",
+    "gulp-stylelint": "^2.0.2"
   },
   "description": ""
 }
