--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-cssnano": "^2.1.0",
+    "gulp-ftp": "^1.1.0",
     "gulp-image-resize": "^0.7.1",
     "gulp-imagemin": "^2.4.0",
     "gulp-livereload": "^3.8.1",
